--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "homepage": "https://github.com/drblue/wcm20-cms-saf-bootscore-5#readme",
   "devDependencies": {
     "laravel-mix": "^6.0.18",
-    "postcss": "^8.2.13"
+    "postcss": "^8.2.13",
+    "resolve-url-loader": "^3.1.2",
+    "sass": "^1.32.12",
+    "sass-loader": "^11.0.1"
   }
 }
