--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.32.12",
     "sass-loader": "^11.0.1"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.9.2",
+    "bootstrap": "^5.0.0-beta3"
   }
 }
