--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "=== bootScore ===",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "mix": "npx mix",
+    "watch": "npx mix watch"
   },
   "repository": {
     "type": "git",
